# candy-holders

./: .gitignore  Cargo.toml  README.md
rs/: Cargo.toml  create-new-metadata.sh  fetch-old-metadata.sh
rs/new-metadata/: 12q6LkHZ7Qf9hGfN3RPfbK2PKn7Q5wJEzjjQ4WRTz77Y.json  13gMFDKJc9jvYjy8TGCzAq6dTGjAEUUyQJVruHWKx8fS.json  13hsFSzLkwusBsUBheiND3d993XwiGsLsANrTucZTGVb.json  14L7qQbECLHRa4JcuQL7EXnmWec52WE37T6ba5prM9kq.json  16bFnAUk9h2ZW3JjNgcZiecmGDbbTRSUxZubN5WAEhj.json  22dajGasdsCXiHix328y9upaEDzyT5x99aArwAkMh2NJ.json  27iNEuspAu8cAMyZHHeU9fheXginvH4rHqtnzRotiMCW.json  28yiz64VgrBEdupVhyECqCQqEfR8Q2VxK41wL9L2jDPr.json  291uGtPhneDWjJgV5UbWAJHSKTwhihnmsExx25ZVNRYq.json  295ErE2jWJXcmcrBPfhUjyLjHsbF9vdrA3WVwuYjoUJY.json  29RHA6JpHXamcXNDEgVZcytfRh8breEvs3VMwkXANHAC.json  2A2bgUpjdveRrExBwhEXWTz927UeRPdem5vZEkPCuMNo.json  2CNg8SqokAAr2emDFsEQM5Kvibbd5DRgud8D6sQgP79m.json  2CoTPRA3oDX2VeBczsWSvdpzVPqpoRamY7r4FCSh4WTt.json  2GR1rH3nPXKU9XAycuRmdRQ9BY9AgqLiqhs3EQTzVsbJ.json  2GbrRttAqYw1DSsUMBxcd1hkvevxKCGjy2KnoM5k1GkY.json  2HZdoKCksPtZPySAdu3GLxdQzsAC2Y6y1k6DW8P9SaFX.json  2HnE6PL3gpCvhVKSix1zzKmuQFWP219iatdyXxJhVtQD.json  2JXtPZ9yfBuRYgWqMkiCUt9casLaN2oL5axH16pKKJCg.json  2JsKMzydb9LhrXCfpwtXFe5MpSck3r6b8Uh7mTtxHwZZ.json  2JwtibknCmwyLuuutHaJH9mcDv2yKnMyCRTrA4LVVHUk.json  2LQd6fKFMxcQZ8CV9hQaqapPMbrig3CDEf1mB7VjWPwx.json  2NPBRt39LfZsAWdKAqLEqX2qk2WVZ9taXaMTWU2pr1yQ.json  2P25hrqUizBecYq7WKm5FVMvAd4gw3akNsTcHy3C4w2E.json  2PH45KUzEVb9VfVXKhGQc5PQjwN9TeFtXSDxvosd8WGz.json  2PPKrTZxnErSYgFxdkq4shwu5RscccZtiHEqrmdbDVWk.json  2PYoJqfd6Z6e5dMkNf1NdSVCQnSZ7gHNjTD282Q2Z8uM.json  (+973 more)
(+1010 files in other folders)
